--- a/www/index.html
+++ b/www/index.html
@@ -260,7 +260,7 @@
       </p>
 
       <div class="screenshot">
-        <img src="https://raw.githubusercontent.com/DLhugly/Clif/main/SplashScreen.png" alt="Clif editor screenshot">
+        <img src="https://raw.githubusercontent.com/DLhugly/Clif/main/Clif.gif" alt="Clif editor demo">
       </div>
     </div>
   </section>
